0029453: Draw Harness - unclear syntax of "add" command

Help message is corrected for "add" command.